--- a/src/app/score-board/score-board.component.html
+++ b/src/app/score-board/score-board.component.html
@@ -1,5 +1,5 @@
 
-
+<!-- 
 
 
 
@@ -12,4 +12,4 @@
 <br>
 
 
-<div *ngIf="selectedCard">I will kill you with a<input type="text" [(ngModel)]="selectedCard.name"></div>
+<div *ngIf="selectedCard">I will kill you with a<input type="text" [(ngModel)]="selectedCard.name"></div> -->
